fixed stats section with number of books read icon too wide

--- a/style.css
+++ b/style.css
@@ -212,6 +212,10 @@ p {
   align-self: center;
 }
 
+.num-books-read-display .book-read {
+    width: 25px;
+}
+
 .toggle-read,
 .remove-card,
 #confirm-btn {
